# SnakeC

./: CMakeLists.txt  NOTICE.txt  README.md  main.c  snake.c  snake.h
doc/licenses/: NCURSES.txt
lib/licenses/: NCURSES.txt
lib/mtwister/: CMakeLists.txt
lib/pdcurses/: CMakeLists.txt
lib/pdcurses/src/: pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c
src/: data.h  main.c  snake.c  snake.h  thrdef.h  thread_port.h  threaded_fun.c  threaded_fun.h
